@@ -32,6 +32,7 @@ enum {
 	POWER_KEY,
 	EJECT_KEY,
 	HOME_KEY,
+	MEDIA_KEY,
 	SEARCH_KEY,
 	EMAIL_KEY,
 	SLEEP_KEY,
@@ -63,6 +64,7 @@ static struct {
 	{ POWER_KEY, GCONF_BINDING_DIR "/power", NULL },
 	{ EJECT_KEY, GCONF_BINDING_DIR "/eject", NULL },
 	{ HOME_KEY, GCONF_BINDING_DIR "/home", NULL },
+	{ MEDIA_KEY, GCONF_BINDING_DIR "/media", NULL },
 	{ SEARCH_KEY, GCONF_BINDING_DIR "/search", NULL },
 	{ EMAIL_KEY, GCONF_BINDING_DIR "/email", NULL },
 	{ SLEEP_KEY, GCONF_BINDING_DIR "/sleep", NULL },
